<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:key="@string/key_combov2_settings"
        android:title="@string/combov2_title"
        app:initialExpandedChildrenCount="0">

        <Preference
            android:key="@string/key_combov2_pair_with_pump"
            android:title="@string/combov2_pair_with_pump">
            <intent
                android:targetClass="info.nightscout.androidaps.plugins.pump.combov2.activities.ComboV2PairingActivity"
                android:targetPackage="info.nightscout.androidaps" />
        </Preference>

        <Preference
            android:title="@string/combov2_unpair_pump"
            android:key="@string/key_combov2_unpair_pump"/>

        <SeekBarPreference
            android:key="@string/key_combov2_discovery_duration"
            android:title="@string/combov2_discovery_duration"
            android:min="30"
            android:max="300"
            android:defaultValue="300" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_combov2_unpair_unknown_combos"
            android:title="@string/combov2_unpair_unknown_combos" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_combov2_verbose_logging"
            android:title="@string/combov2_verbose_logging" />

    </PreferenceCategory>
</androidx.preference.PreferenceScreen>
